--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -5,11 +5,9 @@
     font-family: Raleway, sans-serif;
 }
 
-i{
-    color: #000;
-}
 
 #calendar-header, #days-name-container {
+    align-items: center;
     text-align: center;
     background: $header-color;
     color: #fff;
@@ -19,10 +17,35 @@ i{
     font-weight: 700;
     text-transform: uppercase;
     display:flex;
+    padding-top: 0.6rem;
     .cell {
         background: $header-color;
         color: #fff;
         flex-wrap: wrap;
+    }
+    button{
+        background: transparent;
+        border: 0;
+        outline:none;
+        cursor: pointer;
+        i{
+            color: #fff;
+        }
+        i:hover{
+            opacity: .7;
+        }
+    }
+    button:nth-child(1){
+        i{
+            float: left;
+            padding-left: 2rem;
+        }
+    }
+    button:nth-child(3){
+        i{
+            float: right;
+            padding-right: 2rem;
+        }
     }
 }
 
@@ -41,6 +64,7 @@ i{
 
     .cell {
         border: #CCCCCC 1px solid;
+        cursor: pointer;
     }
 
     .cell:active:not(.cell_disabled) {
@@ -54,6 +78,7 @@ i{
 
     .cell_disabled{
         background: #ddd;
+        cursor: default;
     }
 }
 
@@ -65,6 +90,5 @@ i{
     padding: 10px 0;
     text-align: center;
     width: calc(100% / 7);
-    cursor: pointer;
 }
 
