Set colour palette

--- a/src/assets/sass/_colours.scss
+++ b/src/assets/sass/_colours.scss
@@ -1,1 +1,7 @@
-$header-color: #0e717f;
+$primary-bg: #0e717f;
+$primary-text:#fff;
+$border: #CCCCCC;
+$cell-disabled-bg:#ddd;
+$cell-bg:#fff;
+$cell-text:#000;
+$cell-hover-bg:#eee;
