BookingList class created

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -110,5 +110,6 @@
 .active{
     background: $primary-bg !important ;
     color: $primary-text;
+    border-color: $primary-bg !important;
     font-weight: bold;
 }
