--- a/src/assets/sass/_colours.scss
+++ b/src/assets/sass/_colours.scss
@@ -1,7 +1,13 @@
 $primary-bg: #0e717f;
 $primary-text:#fff;
+
 $border: #CCCCCC;
+
 $cell-disabled-bg:#ddd;
 $cell-bg:#fff;
 $cell-text:#000;
 $cell-hover-bg:#eee;
+$cell-empty-bg: #eee;
+
+$hour-text: #0c1827;
+$hour-bg: #eaeaea;
