--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -71,6 +71,7 @@
 
 #days-container {
     border: $border 1px solid;
+    background: $cell-empty-bg;
 
     .cell_empty {
         width: calc(100% / 7);
@@ -125,14 +126,14 @@
         float: left;
         font-size: 14px;
         width: 21%;
-        color: #0c1827;
+        color: $hour-text;
         line-height: 18px;
         text-align: center;
         font-weight: bold;
         padding: 10px 0;
         margin: 8px 4% 0 0;
         border-radius: 4px;
-        background: #eaeaea;
+        background: $hour-bg;
         cursor: pointer;
     }
     a.hour:hover{
